chore: fix webcontainer i18n width overflow

--- a/src/webcontainers/i18next/public/styles.css
+++ b/src/webcontainers/i18next/public/styles.css
@@ -1,6 +1,5 @@
 body {
   height: 100%;
-  width: 100%;
   font-family: Sans-Serif;
   padding: 0.4rem 1.2rem;
 }
